--- a/src/main/webapp/partials/enriching-and-cleaning/geolift.html
+++ b/src/main/webapp/partials/enriching-and-cleaning/geolift.html
@@ -3,93 +3,177 @@
 	<b>Framework to Enrich Geographic Content in the Semantic Web</b>
 	<br>
 	<br>
-	<p>To get started upload a file for processing and fill in the configuration options.</p>
+	<p>To get started choose whether to process a file or endpoint, you can then choose an example or specify your own parameters.</p>
 	
 <form class="form-inline InputForm col-xs-11" role="form" ng-show="inputForm">
-	<div id="geoliftOptions">
+	<i type="button" class="close glyphicon glyphicon-refresh" aria-hidden="true" onclick="document.location.reload()"></i>
+	<div ng-show="configOptions">
 	<div class="row">
 		<div class="col-xs-12">
 		<h5 class="green bold">GeoLift Configuration</h5>
 		</div>
 	</div>
 	<br>
-	<div class="row" ng-controller="ImportFormCtrl">
-			<label for="inputFile" class="col-xs-2 control-label">Upload a File</label>
-		    	<div class="col-xs-6">
-					    <input id="lefile" class="form-control input-sm" type="file" ng-file-select="onFileSelect($files)" 
-					    		multiple name="fileName" accept=".xml" style="display:none">
+	
+	<div class="row below">
+			<div class="col-xs-2">
+			<label for="options">Data Source</label>
+			</div>
+			<div class="col-xs-10">
+			<select id="options" class="form-control input-sm" ng-model="Options" 
+				ng-options="option for option in options.datasource" ng-change="choice(Options)">
+			 <option value="">Choose data source type</option>
+			</select>
+			</div>
+	</div>
+	
+	<div class="row below" ng-show="options.fileExamples">
+			<div class="col-xs-2">
+			<label>File Examples</label>
+			</div>
+			<div class="col-xs-10">
+			<select id="fileExample" class="form-control input-sm" ng-model="fileExample" 
+			ng-options="example.label for example in fileExamples" ng-change="FillForm(fileExample.label)">
+			<option value="">Choose an example</option>
+			</select>
+			</div>
+	</div>
+	
+	<div class="row below" ng-show="options.epExamples">
+			<div class="col-xs-2">
+			<label>Endpoint Examples</label>
+			</div>
+			<div class="col-xs-10">
+			<select id="epExample" class="form-control input-sm" ng-model="epExample" 
+			ng-options="example.label for example in epExamples" ng-change="FillForm(epExample.label)">
+			<option value="">Choose an example</option>
+			</select>
+			</div>
+	</div>
+	
+	<div class="row below" ng-show="options.endpoints">
+			<div class="col-xs-2">
+			<label>Endpoints</label>
+			</div>
+			<div class="col-xs-10">
+			<select id="endpointSelect" class="form-control input-sm" ng-model="endpointSelect" 
+			ng-options="endpoint.endpoint for endpoint in endpoints" ng-change="FillForm(endpointSelect.label)">
+			<option value="">Choose an endpoint</option>
+			</select>
+			</div>
+	</div>
+	
+	<div class="row below" ng-controller="ImportFormCtrl" ng-show="options.inputFile">
+			<label for="inputFile" class="col-xs-2 control-label">Upload a File for Enrichment</label>
+		    	<div class="col-xs-10">
+					    <input id="lefile" class="form-control input-sm" type="file" ng-file-select="loadDataFile($files); onFileSelect($files)" 
+					    		multiple name="fileName" accept=".ttl, .n3, .nt, .rdf" style="display:none">
 					  	<div class="error" ng-show="uploadedError()">Invalid:
 					  	<span>{{uploadMessage}}</span></div>
 						<div class="input-append">
-						<input id="dummyInput" class="input-sm pull-left col-xs-9" type="text" onclick="$('input[id=lefile]').click();">
+						<input id="dummyGeoLiftInput" class="input-sm pull-left col-xs-9" type="text" onclick="$('input[id=lefile]').click();">
 						<a class="btn btn-sm btn-success btn-large pull-left col-xs-3" onclick="$('input[id=lefile]').click();">Browse</a>
 						</div>
 			    </div>
     </div>
-    <br><br>
-	<div class="row">
+    
+    <div class="row below" ng-controller="ImportFormCtrl" ng-show="options.configFile">
+			<label for="inputFile" class="col-xs-2 control-label">Upload a Configuration File</label>
+		    	<div class="col-xs-10">
+					    <input id="leotherfile" class="form-control input-sm" type="file" ng-file-select="loadConfigFile($files)" 
+					    		multiple name="fileName" accept=".tsv" style="display:none">
+					  	<div class="error" ng-show="uploadedError()">Invalid:
+					  	<span>{{uploadMessage}}</span></div>
+						<div class="input-append">
+						<input id="dummyConfigInput" class="input-sm pull-left col-xs-9" type="text" onclick="$('input[id=leotherfile]').click();">
+						<a class="btn btn-sm btn-success btn-large pull-left col-xs-3" onclick="$('input[id=leotherfile]').click();">Browse</a>
+						</div>
+			    </div>
+    </div>
+    
+	
+	<div class="row below" ng-show="inputDisplayRow">
 			<div class="col-xs-2">
-				<label>Add Enriching Options</label>
+			<label>Data Source</label>
+			</div>
+			<div class="col-xs-10">
+				<input class="form-control input-sm" id="inputDisplay" ng-model="inputDisplay" readonly="readonly"></input>
+			</div>
+	</div>
+	 
+	<div class="row" ng-show="addParamButton">
+			<div class="col-xs-2">
 		    </div>
 		    <div class="col-xs-2">
-				<a class="btn btn-sm btn-success btn-block" ng-click="appendInput(0)">Dereferencing</a>
-	  		</div>
-	  		<div class="col-xs-2">
-				<a class="btn btn-sm btn-success btn-block" ng-click="appendInput(1)">NLP</a>
-	  		</div>
-	  		<div class="col-xs-2">
-				<a class="btn btn-sm btn-success btn-block" ng-click="appendInput(2)">Linking</a>
+				<a class="btn btn-sm btn-success btn-block" ng-click="appendInput()">Add Parameter</a>
 	  		</div>
 	</div>
 	<br>
 	<br>
-	<form class="form-inline col-xs-11" role="form">
-	<div class="row" ng-show="options[0].visible">
+	<div class="form-inline">
+	<div class="row below" ng-show="params[0].visible">
 	<div class="col-xs-2" style="height:100%">
-		<h5 class="green bold">Dereferencing Options</h5>
+		<h5 class="green bold">Parameters</h5>
 	</div>
-	<div class="col-xs-6">
-	<div ng-repeat="option in options[0].inputs">
-		<div class="pull-left" style="width:90%"><input class="form-control input-sm"></input></div>
-		<span class="glyphicon glyphicon-plus plusbutton pull-left" ng-click="appendInput(0)" aria-hidden="true"></span>
-		<button type="button" class="close pull-left" ng-click="removeInput(0, $index)" aria-hidden="true">&times;</button>
+	<div class="col-xs-10">
+	<span>
+		<div class="pull-left" style="width:5%"><label>Index</label></div>
+		<div class="pull-left" style="width:85%; margin-left:10px;"><label>Module</label></div>
+	</span>
+	</div>
+	<div class="col-xs-10">
+	<div ng-repeat="param in params[0].inputs">
+	<span>
+		<div class="pull-left" style="width:5%"><input class="form-control input-sm" value="{{param.index}}"></input></div>
+		<div class="pull-left" style="width:85%"><input class="form-control input-sm" value="{{param.module}}"></input></div>
+		<span class="glyphicon glyphicon-plus plusbutton pull-left" ng-click="appendInput()" aria-hidden="true"></span>
+		<button type="button" class="close pull-left" ng-click="removeInput($index)" aria-hidden="true">&times;</button>
+	</span>
 	<br><br><br>
 	</div>
 	</div>
 	</div>
-	<div class="row" ng-show="options[1].visible">
-	<div class="col-xs-2" style="height:100%">
-		<h5 class="green bold">Natural Language Processing Options</h5>
-	</div>
-	<div class="col-xs-6">
-	<div ng-repeat="option in options[1].inputs">
-		<div class="pull-left" style="width:90%"><input class="form-control input-sm"></input></div>
-		<span class="glyphicon glyphicon-plus plusbutton pull-left" ng-click="appendInput(1)" aria-hidden="true"></span>
-		<button type="button" class="close pull-left" ng-click="removeInput(1, $index)" aria-hidden="true">&times;</button>
-	<br><br><br>
-	</div>
-	</div>
-	</div>
-	<div class="row" ng-show="options[2].visible">
-	<div class="col-xs-2" style="height:100%">
-		<h5 class="green bold">Linking Options</h5>
-	</div>
-	<div class="col-xs-6">
-	<div ng-repeat="option in options[2].inputs">
-		<div class="pull-left" style="width:90%"><input class="form-control input-sm"></input></div>
-		<span class="glyphicon glyphicon-plus plusbutton pull-left" ng-click="appendInput(2)" aria-hidden="true"></span>
-		<button type="button" class="close pull-left" ng-click="removeInput(2, $index)" aria-hidden="true">&times;</button>
-	<br><br><br>
-	</div>
-	</div>
-	</div>
-	<div class="row" ng-show="options[3].visible">
+	
+	<div class="row" ng-show="startButton">
 		<div class="col-xs-2"></div>
 		<div class="col-xs-2">
-		  <a class="btn btn-sm btn-primary btn-block" ng-click="startGeoLift()">Start GeoLift</a>
+		  <a class="btn btn-sm btn-success btn-block" ng-click="startGeoLift()">Start GeoLift</a>
 		</div>
 	</div>
-	</form>
+	</div>
+	</div>
+	
+	<div class="row">
+		<div class="col-xs-12">
+		<div class="progress progress-striped active" ng-show="showProgress">
+		<div class="progress-bar progress-bar-success"  role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100" style="width: 100%">
+		</div>
+		</div>
+		</div>
+	</div>
+	<div class="row">
+	<div class="col-xs-12" ng-show="showProgress">
+		<b>This might take a while... Please keep this browser window open. You can view the results here when execution is complete.</b>
+	</div>
+	</div>
+</form>
+
+<form class="form-horizontal InputForm col-xs-11" role="form" ng-show="reviewForm">
+	<div class="row">
+		<h5 class="green bold">Results</h5>
+	</div>
+	<br>
+	<div class="row">
+	    <label for="ReviewResults">Extracted Triples</label>
+	    <textarea class="form-control" id="ReviewResults" ng-model="results"></textarea>
+	</div>
+	<br>
+	<div class="row">
+	<div class="col-xs-12">
+		<div class="col-xs-2 pull-left" style="padding-left:0">
+			  <a class="btn btn-sm btn-success btn-block" onclick="location.reload()">Restart</a>
+		</div>
+	</div>
 	</div>
 </form>
 </div>
