Bold text for textarea reviews

--- a/src/main/webapp/partials/enriching-and-cleaning/geolift.html
+++ b/src/main/webapp/partials/enriching-and-cleaning/geolift.html
@@ -171,7 +171,7 @@
 	<br>
 	<div class="row">
 	    <label for="ReviewResults">Extracted Triples</label>
-	    <textarea class="form-control" id="ReviewResults" ng-model="results"></textarea>
+	    <textarea class="form-control boldtext" id="ReviewResults" ng-model="results"></textarea>
 	</div>
 	<br>
 	<div class="row">
