--- a/src/main/webapp/partials/linking/limes.html
+++ b/src/main/webapp/partials/linking/limes.html
@@ -275,12 +275,12 @@
 	<br>
 	<div class="row">
 	    <label for="ReviewResults">Results for review</label>
-	    <textarea class="form-control" id="ReviewResults" ng-model="limes.reviewResults"></textarea>
+	    <textarea class="form-control boldtext" id="ReviewResults" ng-model="limes.reviewResults"></textarea>
 	</div>
 	<br>
 	<div class="row">
 	    <label for="AcceptedResults">Accepted Results</label>
-	    <textarea class="form-control" id="AcceptedResults" ng-model="limes.acceptedResults"></textarea>
+	    <textarea class="form-control boldtext" id="AcceptedResults" ng-model="limes.acceptedResults"></textarea>
 	</div>
 	<br>
 	<br>
