--- a/src/main/webapp/partials/extraction-and-loading/triplegeo.html
+++ b/src/main/webapp/partials/extraction-and-loading/triplegeo.html
@@ -410,7 +410,7 @@
 	<br>
 	<div class="row">
 	    <label for="ReviewResults">Extracted Triples</label>
-	    <textarea class="form-control" id="ReviewResults" ng-model="results"></textarea>
+	    <textarea class="form-control boldtext" id="ReviewResults" ng-model="results"></textarea>
 	</div>
 	<br>
 	<div class="row">
