Open LIMES progress bar and results in new window

--- a/src/main/webapp/partials/linking/limes.html
+++ b/src/main/webapp/partials/linking/limes.html
@@ -250,7 +250,7 @@
 	<div class="row">
 		<div class="col-xs-2"></div>
 		<div class="col-xs-2">
-		  <a class="btn btn-sm btn-success btn-block" id="startLimes" ng-show="startLimes" ng-click="StartLimes()">Start LIMES</a>
+		  <a class="btn btn-sm btn-success btn-block" id="startLimes" ng-show="startLimes" href="#/home/linking/limes-result" target="_blank">Start LIMES</a>
 		</div>
 	</div>
 	<div class="row">
