Partial for result

--- a/src/main/webapp/partials/linking/limes-result.html
+++ b/src/main/webapp/partials/linking/limes-result.html
@@ -22,7 +22,7 @@
 	</div>
 	<div class="row">
 	<div class="col-xs-12" ng-show="showProgress">
-		<b>Processsing and getting the results... Please keep this browser window open.</b>
+		<b>Processsing and getting the results which could take a while... Please keep this browser window open.</b>
 	</div>
 	</div>
 </form>
