--- a/src/main/webapp/partials/extraction-and-loading/triplegeo-result.html
+++ b/src/main/webapp/partials/extraction-and-loading/triplegeo-result.html
@@ -37,7 +37,7 @@
 	<div class="row">
 	<div class="col-xs-12">
 		<div class="col-xs-2 pull-left" style="padding-left:0">
-			  <a class="btn btn-sm btn-success btn-block" onclick="location.reload()">Restart</a>
+			  <a class="btn btn-sm btn-success btn-block">Commit to Graph</a>
 		</div>
 	</div>
 	</div>
