--- a/src/main/webapp/partials/extraction-and-loading/triplegeo.html
+++ b/src/main/webapp/partials/extraction-and-loading/triplegeo.html
@@ -383,7 +383,7 @@
 	<div class="row">
 		<div class="col-xs-2"></div>
 		<div class="col-xs-2">
-		  <a class="btn btn-sm btn-success btn-block" ng-show="stTripleGeo" ng-click="SetParams()">Start TripleGeo</a>
+		  <a class="btn btn-sm btn-success btn-block" ng-show="stTripleGeo" ng-click="LaunchTripleGeo()">Start TripleGeo</a>
 		</div>
 	</div>
 	</div>
