--- a/src/main/webapp/partials/enriching-and-cleaning/geolift-result.html
+++ b/src/main/webapp/partials/enriching-and-cleaning/geolift-result.html
@@ -1,15 +1,16 @@
-<div class="contents" ng-controller="TripleGeoCtrl" ng-init="startTripleGeo()">
-<!-- Subscribe to all flash messages. -->
+<div class="contents" ng-controller="GeoliftCtrl" ng-init="StartGeoLift()">
+	<!-- Subscribe to all flash messages. -->
 	<div flash-alert active-class="in" class="alert fade" duration="10000">
 		<button type="button" class="close" ng-click="hide()">&times;</button>
 	  <span class="alert-message">{{flash.message}}</span>
 	</div>
 
-	<h3 class="green bold">TripleGeo</h3>
-	<b>Utility for Converting Geospatial Data into Triples</b>
+	<h3 class="green bold">GeoLift</h3>
+	<b>Framework to Enrich Geographic Content in the Semantic Web</b>
 	<br>
 	<br>
-
+	
+<form class="form-inline InputForm col-xs-11" role="form" ng-show="inputForm">
 	<div class="row">
 		<div class="col-xs-11">
 		<div class="progress progress-striped active" ng-show="showProgress">
@@ -23,24 +24,30 @@
 		<b>This might take a while... Please keep this browser window open. You can view the results here when execution is complete.</b>
 	</div>
 	</div>
+</form>
 
 <form class="form-horizontal InputForm col-xs-11" role="form" ng-show="reviewForm">
 	<div class="row">
 		<h5 class="green bold">Results</h5>
 	</div>
 	<br>
-	<div class="row">
-	    <label for="ReviewResults">Extracted Triples</label>
+	<div class="row below">
 	    <textarea class="form-control boldtext" id="ReviewResults" ng-model="results"></textarea>
 	</div>
 	<br>
+	<div class="row below">
+		<b>Select the endpoint which you would like to save to.</b>
+	<br>
+	</div>
 	<div class="row">
-	<div class="col-xs-12">
-		<div class="col-xs-2 pull-left" style="padding-left:0">
-			  <a class="btn btn-sm btn-success btn-block">Commit to Graph</a>
+	<select class="form-control" ng-model="saveEndpoint" ng-options="c.endpoint as c.label for c in endpoints" required>
+    </select>
+	</div>
+	<br>
+	<div class="row">
+		<div class="pull-left" style="padding-left:0">
+			  <a class="btn btn-sm btn-success" ng-click="save()">Save Results</a>
 		</div>
 	</div>
-	</div>
 </form>
-
 </div>
