--- a/src/main/webapp/partials/enriching-and-cleaning/geolift.html
+++ b/src/main/webapp/partials/enriching-and-cleaning/geolift.html
@@ -143,42 +143,9 @@
 	<div class="row" ng-show="startButton">
 		<div class="col-xs-2"></div>
 		<div class="col-xs-2">
-		  <a class="btn btn-sm btn-success btn-block" ng-click="startGeoLift()">Start GeoLift</a>
+		  <a class="btn btn-sm btn-success btn-block" ng-click="LaunchGeoLift()">Start GeoLift</a>
 		</div>
 	</div>
-	</div>
-	</div>
-	
-	<div class="row">
-		<div class="col-xs-11">
-		<div class="progress progress-striped active" ng-show="showProgress">
-		<div class="progress-bar progress-bar-success"  role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100" style="width: 100%">
-		</div>
-		</div>
-		</div>
-	</div>
-	<div class="row">
-	<div class="col-xs-12" ng-show="showProgress">
-		<b>This might take a while... Please keep this browser window open. You can view the results here when execution is complete.</b>
-	</div>
-	</div>
-</form>
-
-<form class="form-horizontal InputForm col-xs-11" role="form" ng-show="reviewForm">
-	<div class="row">
-		<h5 class="green bold">Results</h5>
-	</div>
-	<br>
-	<div class="row">
-	    <label for="ReviewResults">Extracted Triples</label>
-	    <textarea class="form-control boldtext" id="ReviewResults" ng-model="results"></textarea>
-	</div>
-	<br>
-	<div class="row">
-	<div class="col-xs-12">
-		<div class="col-xs-2 pull-left" style="padding-left:0">
-			  <a class="btn btn-sm btn-success btn-block" onclick="location.reload()">Restart</a>
-		</div>
 	</div>
 	</div>
 </form>
