--- a/src/main/webapp/partials/default.html
+++ b/src/main/webapp/partials/default.html
@@ -1,6 +1,6 @@
 
   <div class="row contents">
-  	<div class="col-sm-2">
+  	<div class="col-sm-2 sidebar">
 			
 			<div class="panel-group" id="accordion" ng-controller="StackMenuCtrl">
 			  <div class="panel panel-default" ng-repeat="group in groups">
