--- a/src/main/webapp/partials/linking/limes-result.html
+++ b/src/main/webapp/partials/linking/limes-result.html
@@ -22,7 +22,7 @@
 	</div>
 	<div class="row">
 	<div class="col-xs-12" ng-show="showProgress">
-		<b>This might take a while... Please keep this browser window open. You can view the results here when execution is complete.</b>
+		<b>This might take a while... Please keep this browser window open. You can view and save the results here when execution is complete.</b>
 	</div>
 	</div>
 </form>
@@ -43,12 +43,28 @@
 	</div>
 	<br>
 	<br>
-	<div class="row">
-	<div class="col-xs-12">
-		<div class="col-xs-2 pull-left" style="padding-left:0">
-			  <a class="btn btn-sm btn-success btn-block" onclick="location.reload()">Restart</a>
-		</div>
+	<div class="row below">
+		<b>Select the endpoint and graph which you would like to save to.</b>
+	<br>
 	</div>
+	<div class="row">
+	<label>Endpoint</label>
+	<select class="form-control" ng-model="saveEndpoint" ng-options="c.endpoint as c.label for c in endpoints" required>
+    </select>
+	</div>
+	<br>
+	<div class="row below">
+	<label>Graph</label>
+    <select class="form-control" ng-model="saveDataset" ng-options="namedgraph.name as namedgraph.name for namedgraph in namedGraphs" required>
+    </select>
+    </div>
+	<div class="row">
+		<div class="pull-left" style="padding-left:0">
+			  <a class="btn btn-sm btn-success" ng-click="save()">Save All Results</a>
+		</div>
+		<div class="pull-left" style="padding-left:20px">
+			  <a class="btn btn-sm btn-success" ng-click="save()">Save Accepted Results Only</a>
+		</div>
 	</div>
 </form>
 </div>
