uniform look to the settings section

--- a/src/main/webapp/partials/settings.html
+++ b/src/main/webapp/partials/settings.html
@@ -14,8 +14,8 @@
 	</div>
 		
 	<div class="col-lg-10 contents" app-view-segment="1" ng-controller="GeneralSettingsCtrl" >
-	  	
-	  <h2>Generator Settings</h2>
+	  
+    <h3 class="green bold">Generator Settings</h3>
 
 		<dl class="dl-horizontal">
       <dt>URI Base:</dt><dd>{{settings.uriBase}}</dd>
