--- a/src/main/webapp/partials/settings/components.html
+++ b/src/main/webapp/partials/settings/components.html
@@ -1,4 +1,5 @@
-<h2>Components management</h2>
+
+<h3 class="green bold">Components Management</h3>
 
 
 <p>Current workbench configuration has integrated the following components.</p>
@@ -30,5 +31,4 @@
   </tr>
 </tbody>
 </table>
-
 
