--- a/src/main/webapp/partials/settings/datasets.html
+++ b/src/main/webapp/partials/settings/datasets.html
@@ -1,9 +1,8 @@
-
-<h2>Named Graphs Management</h2>
+<h3 class="green bold">Named Graphs Management</h3>
 
 <div ng-controller="GraphCtrl">
 
-  <button type="button" class="btn btn-large btn-primary" data-toggle="modal" data-target="#modalGraph" ng-click="new();">Add new dataset</button>
+  <button type="button" class="btn btn-success btn-large" data-toggle="modal" data-target="#modalGraph" ng-click="new();">Add new dataset</button>
 
   <div class="modal fade" id="modalGraph">
     <form name="graphForm" class="form-horizontal InputForm" role="form" novalidate>
@@ -67,7 +66,7 @@
     </form>
  	</div>
 
-  <h3>Existing Graphs</h3>
+  <h4>Existing Graphs</h4>
 
   <table class="table table-striped">
   <thead>
