Update to Geolift save function

--- a/src/main/webapp/partials/default.html
+++ b/src/main/webapp/partials/default.html
@@ -1,5 +1,5 @@
 
-  <div class="row contents">
+  <div class="contents">
   	<div class="col-sm-2 sidebar">
 			
 			<div class="panel-group" id="accordion" ng-controller="StackMenuCtrl">
