Limes save function

--- a/src/main/webapp/partials/linking/limes-result.html
+++ b/src/main/webapp/partials/linking/limes-result.html
@@ -47,23 +47,15 @@
 		<b>Select the endpoint and graph which you would like to save to.</b>
 	<br>
 	</div>
-	<div class="row">
+	<div class="row below">
 	<label>Endpoint</label>
 	<select class="form-control" ng-model="saveEndpoint" ng-options="c.endpoint as c.label for c in endpoints" required>
     </select>
 	</div>
 	<br>
-	<div class="row below">
-	<label>Graph</label>
-    <select class="form-control" ng-model="saveDataset" ng-options="namedgraph.name as namedgraph.name for namedgraph in namedGraphs" required>
-    </select>
-    </div>
 	<div class="row">
 		<div class="pull-left" style="padding-left:0">
-			  <a class="btn btn-sm btn-success" ng-click="save()">Save All Results</a>
-		</div>
-		<div class="pull-left" style="padding-left:20px">
-			  <a class="btn btn-sm btn-success" ng-click="save()">Save Accepted Results Only</a>
+			  <a class="btn btn-sm btn-success" ng-click="save()">Save</a>
 		</div>
 	</div>
 </form>
