--- a/src/main/webapp/partials/extraction-and-loading/sparqlify.html
+++ b/src/main/webapp/partials/extraction-and-loading/sparqlify.html
@@ -1,4 +1,37 @@
-<h3 class="green bold">Sparqlfy</h3>
+<div class="col-lg-8" ng-controller="SparqlifyCtrl">
+<h3 class="green bold">Sparqlify</h3>
 
+ <b>Sparqlify is a scalable SPARQL-SQL rewriter. More about this tool <a href="{{component.homepage}}" target="_blank">here</a>.
+  <br>
+  <br>
+  <p>To get started select a data set from the drop down menu.</p>
+  <form class="form-horizontal InputForm" role="form" >
+    <div class="form-group">
+      <label for="Endpoint">Endpoint</label>
+      <input type="url" class="form-control" id="Endpoint" disabled="disabled" ng-model="sparqlify.service"></input>
+    </div>
+    <div class="form-group">
+      <label for="DataSet">DataSet</label>
+      <select id="DataSet" class="form-control" ng-model="sparqlify.dataset" ng-options="namedgraph.name as namedgraph.name for namedgraph in namedGraphs" required>
+      </select>
+    </div>
+    <div class="form-group">
+      <a class="btn btn-success btn-large" data-toggle="modal" ng-click="setUrl(); openModal();">Launch Sparqlify</a>
+    </div>
+  </form>
 
-To check with Claus the status of this tool.
+  <!-- Modal -->
+  <div class="modal fade" id="fullModal" >
+    <div class="modal-header">
+      <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+      <h5 class="modal-title green bold">Sparqlify</h5>
+    </div>
+    <div class="modal-body">
+      <modal-iframe></modal-iframe>
+    </div>
+    <div class="modal-footer">
+      <button type="button" class="btn-sm btn-success" data-dismiss="modal">Close</button>
+    </div>       
+	</div><!-- /.modal -->
+</div>
+
