review of TripleGeo and Limes

--- a/src/main/webapp/partials/linking/limes-result.html
+++ b/src/main/webapp/partials/linking/limes-result.html
@@ -43,7 +43,9 @@
 	</div>
 	<br>
 	<br>
-	<div class="row below">
+<!-- 	
+TODO: add input text so user can provide the graph name
+<div class="row below">
 		<b>Select the endpoint and graph which you would like to save to.</b>
 	<br>
 	</div>
@@ -53,9 +55,9 @@
     </select>
 	</div>
 	<br>
-	<div class="row">
+ -->	<div class="row">
 		<div class="pull-left" style="padding-left:0">
-			  <a class="btn btn-sm btn-success" ng-click="save()">Save</a>
+			  <a class="btn btn-sm btn-success" ng-click="save()">Save results in new graphs</a>
 		</div>
 	</div>
 </form>
