--- a/src/main/webapp/partials/extraction-and-loading/triplegeo.html
+++ b/src/main/webapp/partials/extraction-and-loading/triplegeo.html
@@ -44,7 +44,7 @@
 			</div>
 	</div>
 	
-	<div class="row below" ng-show="options.dbExample">
+<!-- 	<div class="row below" ng-show="options.dbExample">
 			<div class="col-xs-2">
 			<label>Database Examples</label>
 			</div>
@@ -54,7 +54,7 @@
 			 <option value="">Choose an example</option>
 			</select>
 			</div>
-	</div>
+	</div> -->
 	
 	<div class="row below" ng-show="options.database">
 			<div class="col-xs-2">
