--- a/src/main/webapp/partials/extraction-and-loading/sparqlify.html
+++ b/src/main/webapp/partials/extraction-and-loading/sparqlify.html
@@ -6,7 +6,7 @@
   <br>
   <p>To get started select a data set from the drop down menu.</p>
   <form class="form-horizontal InputForm" role="form" >
-    <div class="form-group">
+<!--     <div class="form-group">
       <label for="Endpoint">Endpoint</label>
       <input type="url" class="form-control" id="Endpoint" disabled="disabled" ng-model="sparqlify.service"></input>
     </div>
@@ -15,7 +15,7 @@
       <select id="DataSet" class="form-control" ng-model="sparqlify.dataset" ng-options="namedgraph.name as namedgraph.name for namedgraph in namedGraphs" required>
       </select>
     </div>
-    <div class="form-group">
+ -->    <div class="form-group">
       <a class="btn btn-success btn-large" data-toggle="modal" ng-click="setUrl(); openModal();">Launch Sparqlify</a>
     </div>
   </form>
