--- a/src/main/webapp/partials/querying-and-exploration/facete.html
+++ b/src/main/webapp/partials/querying-and-exploration/facete.html
@@ -1,11 +1,14 @@
 
 <div class="col-lg-8" ng-controller="FaceteFormCtrl">
-  <h3 class="green bold">Facete</h3>
+  
+  <h3 class="green bold">{{component.label}}</h3>
 
-  <b>A tool for exploring (geographical) Linked Data datasets on the Web</b>. More about this tool <a href="{{component.homepage}}" target="_blanc">here</a>.
-  <br>
-  <br>
-  <p>To get started select a data set from the drop down menu.</p>
+  <dl class="dl-horizontal">
+    <dt>Version:</dt><dd>{{component.version}}</dd>
+    <dt>Homepage:</dt><dd>{{component.homepage}}</dd>
+  </dl>
+
+  <p>A tool for exploring (geographical) Linked Data datasets on the Web. To get started select a data set from the drop down menu.</p>
   <form class="form-horizontal InputForm" role="form" >
     <div class="form-group">
       <label for="Endpoint">Endpoint</label>
@@ -29,10 +32,7 @@
     </div>
     <div class="modal-body">
       <modal-iframe></modal-iframe>
-    </div>
-    <div class="modal-footer">
-      <button type="button" class="btn-sm btn-success" data-dismiss="modal">Close</button>
-    </div>       
+    </div>      
 	</div><!-- /.modal -->
 </div>
 
