--- a/src/main/webapp/partials/extraction-and-loading/triplegeo.html
+++ b/src/main/webapp/partials/extraction-and-loading/triplegeo.html
@@ -12,7 +12,9 @@
 	<p>To get started choose whether to process a file or database, you can then choose an example or specify your own parameters.</p>
 	
 <form class="form-inline InputForm col-xs-11" role="form" ng-show="inputForm"  ng-model="tooltips">
-	<i type="button" class="close glyphicon glyphicon-refresh" aria-hidden="true" onclick="document.location.reload()"></i>
+	<button type="button" class="btn btn-link reset" onclick="document.location.reload()">
+	<i class="glyphicon glyphicon-refresh" aria-hidden="false"></i>
+	</button>
 	<div class="row">
 		<div class="col-xs-12">
 		<h5 class="green bold">TripleGeo Configuration</h5>
