--- a/src/main/webapp/partials/linking/limes.html
+++ b/src/main/webapp/partials/linking/limes.html
@@ -13,7 +13,9 @@
 	<p>To get started either upload a configuration file, choose an example, or fill in the options form.</p>
 	
 <form class="form-inline InputForm col-xs-11" role="form" ng-show="inputForm">
-	<i type="button" class="close glyphicon glyphicon-refresh" aria-hidden="true" onclick="document.location.reload()"></i>
+	<button type="button" class="btn btn-link reset" onclick="document.location.reload()">
+	<i class="glyphicon glyphicon-refresh" aria-hidden="false"></i>
+	</button>
 	<div class="row">
 		<div class="col-xs-12">
 		<h5 class="green bold">LIMES Configuration</h5>
