--- a/src/main/webapp/css/app.css
+++ b/src/main/webapp/css/app.css
@@ -228,6 +228,24 @@ a.accordion-toggle:hover{
 	opacity:0.5;
 }
 
+.reset {
+	float: right;
+	text-shadow:none;
+	color: #000000;
+    font-size: 21px;
+    font-weight: bold;
+    line-height: 1;
+    opacity: 0.2;
+    box-shadow: 0 0 0 rgba(0, 0, 0, 0) inset;
+    outline: 0 none;
+}
+
+.reset:hover{
+	color:black;
+	box-shadow: 0 0 0 rgba(0, 0, 0, 0) inset;
+	opacity: 0.6;
+}
+
 /* Glyphicons */
 
 .glyphicon-warning-sign {
