--- a/src/main/webapp/partials/enriching-and-cleaning/geolift.html
+++ b/src/main/webapp/partials/enriching-and-cleaning/geolift.html
@@ -12,10 +12,12 @@
 	<p>To get started choose whether to process a file or endpoint, you can then choose an example or specify your own parameters.</p>
 	
 <form class="form-inline InputForm col-xs-11" role="form" ng-show="inputForm">
-	<i type="button" class="close glyphicon glyphicon-refresh" aria-hidden="true" onclick="document.location.reload()"></i>
+	<button type="button" class="btn btn-link reset" onclick="document.location.reload()">
+	<i class="glyphicon glyphicon-refresh" aria-hidden="false"></i>
+	</button>
 	<div ng-show="configOptions">
 	<div class="row">
-		<div class="col-xs-12">
+		<div class="col-xs-8">
 		<h5 class="green bold">GeoLift Configuration</h5>
 		</div>
 	</div>
