--- a/src/main/webapp/partials/settings/preferences.html
+++ b/src/main/webapp/partials/settings/preferences.html
@@ -12,7 +12,7 @@
   </div>
  
 	<div class="form-actions">
-	  <button type="submit" class="btn btn-primary">Save changes</button>
-	  <button type="button" class="btn">Cancel</button>
+	  <button type="submit" class="btn btn-sm btn-success">Save changes</button>
+	  <button type="button" class="btn-sm btn-default">Cancel</button>
 	</div>
 </form>
