--- a/src/main/webapp/partials/account.html
+++ b/src/main/webapp/partials/account.html
@@ -2,7 +2,7 @@
 <div class="row contents">
   	<div class="col-lg-2">
 			
-			<div class="panel-group" id="accordion" ng-controller="AccountMenuCtrl">
+<!-- 			<div class="panel-group" id="accordion" ng-controller="AccountMenuCtrl">
 			  <div class="panel panel-default" ng-repeat="item in items">
 				  <div class="panel-heading" ng-controller="SidebarCtrl">
 					  <h5 ng-class="{selected:isSelected('{{item.url}}')}" class="panel-title">
@@ -11,7 +11,7 @@
 				  </div>
 			  	</div>
 			</div>
-			
+ -->			
 		</div>
 
 <div class="col-lg-10" app-view-segment="1">
