--- a/src/main/webapp/partials/default.html
+++ b/src/main/webapp/partials/default.html
@@ -22,28 +22,12 @@
 		</div>
 
 	  <div class="col-sm-10 contents" app-view-segment="1">
-	  	<div class="col-sm-7">
- 		 <p>
-	    This is Version 0.1 of the GeoKnow Generator, which comprises a number of tools for managing the life-cycle of Geographic Linked Data. The life-cycle comprises in particular the stages:
-			</p>
-			<ul>
-			<li>Extraction of RDF from text, XML and SQL</li>
-			<li>Querying and Exploration using SPARQL</li>
-			<li>Authoring of Linked Data using a Semantic Wiki</li>
-			<li>Semi-automatic link discovery between Linked Data sources</li>
-			<li>Knowledge-base Enrichment and Repair</li>
-			<li>You can access tools for each of these stages using the menu on the left.</li>
-			</ul>
-			<p>
-			The GeoKnow Generator is developed by the GeoKnow project consortium comprising 6 research groups and companies. The GeoKnow project is co-funded by the European Commission within the 7th Framework Programme (GA no. 318159).
-			</p>
-			<p>
-			You can find further information about the GeoKnow project at <a href="http://geoknow.eu" target="blank">http://geoknow.eu</a>.
-			</p>
-
+	  	<div class="col-sm-8">
+ 		<h3 class="green bold">Welcome to the GeoKnow Generator Demo</h3>
+ 		<h5>Version 0.1</h5>
+ 		<br>
 	  	</div>
 	    </div>
-		</div>
   </div>
 
 
