--- a/src/main/webapp/partials/default.html
+++ b/src/main/webapp/partials/default.html
@@ -24,7 +24,7 @@
 	  <div class="col-sm-10 contents" app-view-segment="1">
 	  	<div class="col-sm-8">
  		<h3 class="green bold">Welcome to the GeoKnow Generator Demo</h3>
- 		<h5>Version 0.1</h5>
+ 		<h5>Version 0.1 Beta</h5>
  		<br>
 	  	</div>
 	    </div>
