--- a/src/main/webapp/partials/linking/limes.html
+++ b/src/main/webapp/partials/linking/limes.html
@@ -112,6 +112,23 @@
 	    </div>
 	</div>
 	<br>
+	<div class="row">
+		<div class="col-xs-2">
+	    <label for="SourceServiceURI">Graph</label>
+	    </div>
+	    <div class="col-xs-4">
+	   	 <select id="SourceGraph" class="form-control" ng-model="limes.SourceGraph" ng-options="namedgraph.name as namedgraph.name for namedgraph in namedGraphs" required>
+		   </select>
+	   </div>
+	    <div class="col-xs-2">
+	    <label for="TargetGraph">Graph</label>
+	    </div>
+	    <div class="col-xs-4">
+	    <select id="TargetGraph" class="form-control" ng-model="limes.TargetGraph" ng-options="namedgraph.name as namedgraph.name for namedgraph in namedGraphs" required>
+		   </select>
+	    </div>
+	</div>
+	<br>
 	<!-- 
 	<div class="row">
 		<div class="col-xs-2">
@@ -176,18 +193,50 @@
 	<br>
 	<div class="row">
 		<div class="col-xs-2">
-	    <label for="SourceProp">Property</label>
+	    <label for="SourceProp1">Property</label>
 	    </div>
 	    <div class="col-xs-4">
-	    <input class="form-control input-sm" id="SourceProp" ng-model="limes.SourceProp"></input>
+	    <input class="form-control input-sm" id="SourceProp" ng-model="limes.SourceProp1"></input>
 	    </div>
 	    <div class="col-xs-2">
-	    <label for="TargetProp">Property</label>
+	    <label for="TargetProp1">Property</label>
 	    </div>
 	    <div class="col-xs-4">
-	    <input class="form-control input-sm" id="TargetProp" ng-model="limes.TargetProp"></input>
+	    <input class="form-control input-sm" id="TargetProp" ng-model="limes.TargetProp1"></input>
 	    </div>
 	</div>
+	<br>
+	<div class="row">
+		<div class="col-xs-2">
+	    <label for="SourceProp2">Property</label>
+	    </div>
+	    <div class="col-xs-4">
+	    <input class="form-control input-sm" id="SourceProp" ng-model="limes.SourceProp2"></input>
+	    </div>
+	    <div class="col-xs-2">
+	    <label for="TargetProp2">Property</label>
+	    </div>
+	    <div class="col-xs-4">
+	    <input class="form-control input-sm" id="TargetProp" ng-model="limes.TargetProp2"></input>
+	    </div>
+	</div>
+	<!-- 
+	<br>
+	<div class="row">
+		<div class="col-xs-2">
+	    <label for="SourceType">Type</label>
+	    </div>
+	    <div class="col-xs-4">
+	    <input class="form-control input-sm" id="SourceType" ng-model="limes.SourceType"></input>
+	    </div>
+	    <div class="col-xs-2">
+	    <label for="TargetType">Type</label>
+	    </div>
+	    <div class="col-xs-4">
+	    <input class="form-control input-sm" id="TargetType" ng-model="limes.TargetType"></input>
+	    </div>
+	</div>
+	-->
 	<br>
 	<div class="row">
 		<div class="col-xs-2">
@@ -215,6 +264,16 @@
 	    <div class="col-xs-10">
 	    <select class="form-control input-sm" id="ExecType" ng-options="option as option.execType for option in options[1].execType"
 	    ng-model="limes.ExecType"></select>
+	    </div>
+	</div>
+	<br>
+	<div class="row">
+		<div class="col-xs-2">
+	    <label for="Granularity">Granularity</label>
+	    </div>
+	    <div class="col-xs-10">
+	    <select class="form-control input-sm" id="Granularity" ng-options="option as option.granularity for option in options[2].granularity"
+	    ng-model="limes.Granularity"></select>
 	    </div>
 	</div>
 	<br>
